@@ -57,6 +57,7 @@ import org.springframework.stereotype.Service;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.toList;
 import static org.niis.xroad.cs.admin.api.exception.ErrorMessage.MEMBER_CLASS_NOT_FOUND;
@@ -108,8 +109,7 @@ public class MemberServiceImpl implements MemberService {
                 .orElseThrow(() -> new NotFoundException(
                         MEMBER_CLASS_NOT_FOUND.build(
                                 "code",
-                                request.getMemberClass()
-                        )));
+                                request.getMemberClass())));
 
         var memberIdEntity = memberIds.findOrCreate(MemberIdEntity.ensure(request.getClientId()));
 
@@ -158,12 +158,19 @@ public class MemberServiceImpl implements MemberService {
     @Override
     public List<SecurityServer> getMemberClientOfServers(ClientId memberId) {
 
-        return xRoadMemberRepository.findOneBy(memberId).stream()
-                .map(SecurityServerClientEntity::getServerClients)
-                .flatMap(Collection::stream)
-                .map(ServerClientEntity::getSecurityServer)
-                .map(securityServerMapper::toTarget)
-                .collect(toList());
+        return xRoadMemberRepository.findOneBy(memberId).map(member -> {
+            var memberServers = member.getServerClients().stream();
+            var subsystemServers = member.getSubsystems().stream()
+                    .map(SecurityServerClientEntity::getServerClients)
+                    .flatMap(Collection::stream);
+
+            return Stream.concat(memberServers, subsystemServers)
+                    .map(ServerClientEntity::getSecurityServer)
+                    .distinct()
+                    .map(securityServerMapper::toTarget)
+                    .toList();
+        })
+                .orElseGet(List::of);
     }
 
     @Override
