@@ -27,8 +27,8 @@
 package org.niis.xroad.cs.admin.globalconf.generator;
 
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import org.apache.commons.lang3.StringUtils;
+import org.niis.xroad.common.core.exception.XrdRuntimeException;
 import org.niis.xroad.cs.admin.api.domain.AnchorUrl;
 import org.niis.xroad.cs.admin.api.domain.AnchorUrlCert;
 import org.niis.xroad.cs.admin.api.domain.TrustedAnchor;
@@ -37,8 +37,6 @@ import org.niis.xroad.cs.admin.api.service.SystemParameterService;
 import org.niis.xroad.cs.admin.api.service.TrustedAnchorService;
 import org.niis.xroad.globalconf.model.PrivateParameters;
 import org.springframework.stereotype.Component;
-
-import static java.util.stream.Collectors.toList;
 
 @Component
 @RequiredArgsConstructor
@@ -53,7 +51,7 @@ class PrivateParametersLoader {
 
         var configurationAnchors = trustedAnchorService.findAll().stream()
                 .map(this::toConfigurationAnchor)
-                .collect(toList());
+                .toList();
         privateParameters.setConfigurationAnchors(configurationAnchors);
         privateParameters.setManagementService(getManagementService());
         privateParameters.setTimeStampingIntervalSeconds(systemParameterService.getTimeStampingIntervalSeconds());
@@ -61,8 +59,8 @@ class PrivateParametersLoader {
         return privateParameters;
     }
 
-    @SneakyThrows
     private PrivateParameters.ManagementService getManagementService() {
+
         var managementService = new PrivateParameters.ManagementService();
 
         String authCertRegUrl = systemParameterService.getAuthCertRegUrl();
@@ -71,9 +69,13 @@ class PrivateParametersLoader {
         }
         managementService.setAuthCertRegServiceAddress(authCertRegUrl);
 
-        managementService.setAuthCertRegServiceCert(managementServiceTlsCertificateService.getTlsCertificate().getEncoded());
-        managementService.setManagementRequestServiceProviderId(systemParameterService.getManagementServiceProviderId());
-        return managementService;
+        try {
+            managementService.setAuthCertRegServiceCert(managementServiceTlsCertificateService.getTlsCertificate().getEncoded());
+            managementService.setManagementRequestServiceProviderId(systemParameterService.getManagementServiceProviderId());
+            return managementService;
+        } catch (Exception e) {
+            throw XrdRuntimeException.systemException(e);
+        }
     }
 
     private PrivateParameters.ConfigurationAnchor toConfigurationAnchor(TrustedAnchor trustedAnchor) {
@@ -82,7 +84,7 @@ class PrivateParametersLoader {
         configurationAnchor.setGeneratedAt(trustedAnchor.getGeneratedAt());
         configurationAnchor.setSources(trustedAnchor.getAnchorUrls().stream()
                 .map(this::toConfigurationSource)
-                .collect(toList()));
+                .toList());
         return configurationAnchor;
     }
 
@@ -92,7 +94,7 @@ class PrivateParametersLoader {
         configurationSource.setVerificationCerts(
                 anchorUrl.getAnchorUrlCerts().stream()
                         .map(AnchorUrlCert::getCert)
-                        .collect(toList()));
+                        .toList());
         return configurationSource;
     }
 }
